# pyri-vision

./: README.md  pyproject.toml  setup.py
config/: pyri_vision_camera_calibration_service_default_info.yml  pyri_vision_camera_viewer_service_default_info.yml  pyri_vision_robot_calibration_service_default_info.yml  pyri_vision_template_matching_service_default_info.yml
doc/: vision_blocks_functions.md
src/pyri/vision/: blockly.py  device_type_adapter.py  sandbox_functions.py  service_node_launch.py
src/pyri/vision/aruco_detection_service/: __main__.py  pyri_vision_aruco_detection_service_default_info.yml  tech.pyri.vision.aruco_detection.robdef
src/pyri/vision/camera_calibration_service/: __main__.py  pyri_vision_camera_calibration_service_default_info.yml  tech.pyri.vision.calibration.robdef
src/pyri/vision/camera_viewer_service/: __main__.py  pyri_vision_camera_viewer_service_default_info.yml  tech.pyri.vision.viewer.robdef
src/pyri/vision/robot_calibration_service/: __main__.py  tech.pyri.vision.robot_calibration.robdef
src/pyri/vision/robot_calibration_service/opencv_aruco_extrinsic_calibration/: __init__.py  opencv_aruco_extrinsic_calibration.py
src/pyri/vision/template_matching/: __main__.py  tech.pyri.vision.template_matching.robdef
src/pyri/vision/template_matching/opencv_template_matching/: __init__.py  opencv_template_matching.py
src/pyri/vision/template_matching/opencv_template_matching_ROI/: __init__.py  opencv_template_matching_ROI.py
test/: test_blockly.py
test/test_pyri_vision/: test_blockly.py
